Fix #156: Lighten red asterisks on blue bg
Issue #156: Provider enrollment: hard to see red asterisks on blue background

--- a/psm-app/cms-web/WebContent/css/style.css
+++ b/psm-app/cms-web/WebContent/css/style.css
@@ -1136,6 +1136,11 @@ input.date{
   color:#e60000;
 }
 
+.required-dark-background{
+  color:#f66;
+  font-size:120%;
+}
+
 /* newEnrollmentPanel */
 .newEnrollmentPanel{
   width:100%;
